RAT-244: Minor refactorings, fix warnings